--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div id="root">
     </div>
-    <script type="module" src="/src/react-app/main.tsx">
+    <script type="module" src="./src/react-app/main.tsx"></script>
     </script>
   </body>
 </html>
